Fixed link title in ProjectItem

--- a/src/components/astro/project/ProjectItem.astro
+++ b/src/components/astro/project/ProjectItem.astro
@@ -49,8 +49,7 @@ const { Content } = await project.render();
         )
         : (
         <a href={url} class="hover:text-primary">
-          🔗{Astro.url.origin}
-          {url}
+          🔗{Astro.url.origin}{url}
         </a>
       ))
   }
